plugins {
    id 'java'
    id 'jacoco'
    id 'io.gatling.gradle' version '3.11.5.2'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

group = 'org.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    // Test dependencies
    testImplementation 'org.mockito:mockito-core:5.4.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.4.0'
    // testImplementation 'org.mockito:mockito-inline:5.4.0'
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
    testImplementation 'org.assertj:assertj-core:3.22.0'

    // Gatling dependencies
    gatling 'io.gatling.highcharts:gatling-charts-highcharts:3.11.5'
    gatling 'io.gatling:gatling-app:3.11.5'


    implementation 'net.bytebuddy:byte-buddy:1.14.5'
    implementation("cglib:cglib:3.3.0")

    implementation 'org.mindrot:jbcrypt:0.4'
    implementation 'redis.clients:jedis:5.0.2'

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'
    implementation 'org.aspectj:aspectjweaver:1.9.21'


    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'

    implementation 'org.reflections:reflections:0.10.2'
    implementation 'org.javassist:javassist:3.28.0-GA'
    implementation 'org.ow2.asm:asm:9.7'
    implementation 'org.ow2.asm:asm-tree:9.7'

    testImplementation 'org.slf4j:slf4j-simple:1.7.32'
    implementation 'ch.qos.logback:logback-classic:1.2.6'

    implementation 'org.yaml:snakeyaml:1.29'

    implementation("org.objenesis:objenesis:3.3")

    implementation 'com.zaxxer:HikariCP:5.1.0'
    runtimeOnly 'mysql:mysql-connector-java:8.0.33'



}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['-parameters']
}


test {
    useJUnitPlatform()
    jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
            '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
            '--add-opens=java.base/java.security=ALL-UNNAMED'
            '--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED'
            '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED'
    testLogging {
        events 'passed', 'skipped', 'failed' // Show test execution details
        showStandardStreams = true // Show test output
    }
    finalizedBy jacocoTestReport
}

jacoco {
    toolVersion = '0.8.12'
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
        html.outputLocation = layout.buildDirectory.dir('reports/jacoco/html')
        xml.outputLocation = layout.buildDirectory.file('reports/jacoco/jacoco.xml')
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    '**/*Exception.class',
                    '**/exception/**',
                    '**/app/**',
                    '**/data/**',
            ])
        }))
    }
}

// Gatling configuration
gatling {
    // Gatling simulations are in src/gatling/scala
}